--- a/CSS/style.css
+++ b/CSS/style.css
@@ -236,6 +236,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .btnContact,
@@ -260,4 +261,12 @@
   background-color: rgb(10, 22, 37);
   text-decoration: none;
   color: white;
+}
+
+#Instagram {
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+  -webkit-background-clip: text;
+  /* Also define standard property for compatibility */
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
