--- a/CSS/mangas.css
+++ b/CSS/mangas.css
@@ -43,7 +43,7 @@
 
 /* Style the back side */
 .flip-card-back {
-	background: linear-gradient(152.25deg, #3F7DC7 0%, #741ABB 100%);
+	background: linear-gradient(152.25deg, rgba(63, 125, 199, 0.8) 0%, rgba(116, 26, 187, 0.8) 65%);
 	color: white;
 	transform: rotateY(180deg);
 	display: flex;
@@ -56,7 +56,7 @@
 	border-radius: 10px;
 }
 
-h1{
+h1 {
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 800;
 	font-size: 40px;
