--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,247 +7,260 @@
 
 
 * {
-  margin: 0px;
-  padding: 0px;
+	margin: 0px;
+	padding: 0px;
 }
 
 ::-webkit-scrollbar {
-  width: 0px;
-  background: transparent;
+	width: 0px;
+	background: transparent;
 }
 
+.footerBg {
+	height: 60px;
+	background-color: black;
+}
+
+.footerBtn {
+	background-color: #0A1625;
+	color: white;
+	border: none;
+	border-radius: 50px;
+	height: 50px;
+	width: 150px;
+}
 
 
 /* Particular CSS */
 
 /* PC */
 @media (min-width:1024px) {
-  body {
-    background-image: url(../IMG/backgrounds/lgBackground.jpg);
-    background-repeat: no-repeat;
-    background-position: bottom;
-    background-size: cover;
-    background-attachment: fixed;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-  }
+	body {
+		background-image: url(../IMG/backgrounds/lgBackground.jpg);
+		background-repeat: no-repeat;
+		background-position: bottom;
+		background-size: cover;
+		background-attachment: fixed;
+		scrollbar-width: none;
+		-ms-overflow-style: none;
+	}
 }
 
 /* TABLET VERTICAL */
 @media (min-width:768px) and (max-width:1023px) {
-  body {
-    background-image: url(../IMG/backgrounds/mdBackgroundVertical.jpg);
-    background-repeat: no-repeat;
-    background-position: bottom;
-    background-size: cover;
-    background-attachment: fixed;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-  }
+	body {
+		background-image: url(../IMG/backgrounds/mdBackgroundVertical.jpg);
+		background-repeat: no-repeat;
+		background-position: bottom;
+		background-size: cover;
+		background-attachment: fixed;
+		scrollbar-width: none;
+		-ms-overflow-style: none;
+	}
 }
 
 /* TABLET HORIZONTAL */
 @media (min-width:768px) and (max-width:1023px) and (orientation: landscape) {
-  body {
-    background-image: url(../IMG/backgrounds/mdBackgroundHorizontal.jpg);
-    background-repeat: no-repeat;
-    background-position: bottom;
-    background-size: cover;
-    background-attachment: fixed;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-  }
+	body {
+		background-image: url(../IMG/backgrounds/mdBackgroundHorizontal.jpg);
+		background-repeat: no-repeat;
+		background-position: bottom;
+		background-size: cover;
+		background-attachment: fixed;
+		scrollbar-width: none;
+		-ms-overflow-style: none;
+	}
 }
 
 /* CELULAR VERTICAL */
 @media (max-width:767px) {
-  body {
-    background-image: url(../IMG/backgrounds/smBackgroundVertical.jpg);
-    background-repeat: no-repeat;
-    background-position: bottom;
-    background-size: cover;
-    background-attachment: fixed;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-  }
+	body {
+		background-image: url(../IMG/backgrounds/smBackgroundVertical.jpg);
+		background-repeat: no-repeat;
+		background-position: bottom;
+		background-size: cover;
+		background-attachment: fixed;
+		scrollbar-width: none;
+		-ms-overflow-style: none;
+	}
 }
 
 /* CELULAR HORIZONTAL */
 @media (max-width:767px) and (orientation: landscape) {
-  body {
-    background-image: url(../IMG/backgrounds/smBackgroundHorizontal.jpg);
-    background-repeat: no-repeat;
-    background-position: bottom;
-    background-size: cover;
-    background-attachment: fixed;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-  }
+	body {
+		background-image: url(../IMG/backgrounds/smBackgroundHorizontal.jpg);
+		background-repeat: no-repeat;
+		background-position: bottom;
+		background-size: cover;
+		background-attachment: fixed;
+		scrollbar-width: none;
+		-ms-overflow-style: none;
+	}
 }
 
 .headerBg {
-  height: 100px;
-  background-color: rgba(0, 0, 0, 0.6);
-  backdrop-filter: blur(20px);
+	height: 100px;
+	background-color: rgba(0, 0, 0, 0.6);
+	backdrop-filter: blur(20px);
 }
 
 .linkHeader {
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 800;
-  font-size: 40px;
-  color: rgba(200, 200, 200);
-  text-decoration: none;
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 800;
+	font-size: 40px;
+	color: rgba(200, 200, 200);
+	text-decoration: none;
 }
 
 .drpDwnItem {
-  background-color: rgb(130, 130, 130);
+	background-color: rgb(130, 130, 130);
 }
 
 .drpDwnItem:hover {
-  background-color: rgb(130, 130, 130);
+	background-color: rgb(130, 130, 130);
 }
 
 .activeDrpDwnItem {
-  color: rgb(107, 45, 208);
+	color: rgb(107, 45, 208);
 }
 
 .activeDrpDwnItem:hover {
-  background-color: rgb(130, 130, 130);
-  color: rgb(107, 45, 208);
+	background-color: rgb(130, 130, 130);
+	color: rgb(107, 45, 208);
 }
 
 .strongIdiom {
-  border: 1px solid rgb(107, 45, 208);
-  border-radius: 10px;
+	border: 1px solid rgb(107, 45, 208);
+	border-radius: 10px;
 }
 
 .DrpDwnBg {
-  background-color: rgb(130, 130, 130);
+	background-color: rgb(130, 130, 130);
 }
 
 .btnIdiomDrpDwn,
 .btnIdiomDrpDwn:hover,
 .btnIdiomDrpDwn:focus {
-  color: rgb(200, 200, 200);
-  border: 1px solid rgb(200, 200, 200);
+	color: rgb(200, 200, 200);
+	border: 1px solid rgb(200, 200, 200);
 }
 
 .btnIdiomDrpDwn:active {
-  color: rgb(107, 45, 208) !important;
-  border: 1px solid rgb(107, 45, 208) !important;
+	color: rgb(107, 45, 208) !important;
+	border: 1px solid rgb(107, 45, 208) !important;
 }
 
 .headerIcon {
-  position: absolute;
-  top: 50px;
-  left: calc(50% - 100px/2);
-  width: 100px;
-  height: 100px;
-  background-color: rgb(190, 30, 216);
-  border: 4px solid rgba(0, 0, 0, 0.6);
-  border-radius: 50%;
+	position: absolute;
+	top: 50px;
+	left: calc(50% - 100px/2);
+	width: 100px;
+	height: 100px;
+	background-color: rgb(190, 30, 216);
+	border: 4px solid rgba(0, 0, 0, 0.6);
+	border-radius: 50%;
 }
 
 .idiomDrpDwn {
-  font-family: 'Inconsolata', monospace;
-  font-weight: 400;
-  font-size: 30px;
+	font-family: 'Inconsolata', monospace;
+	font-weight: 400;
+	font-size: 30px;
 }
 
 .firstText,
 .thirdText {
-  height: 300px;
-  background-color: rgba(10, 22, 37, 0.6);
-  border-radius: 50px;
-  color: rgb(238, 238, 238);
-  border: 2px solid rgba(0, 0, 0, 0.5);
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 400;
-  font-size: 24px;
-  user-select: none;
+	height: 300px;
+	background-color: rgba(10, 22, 37, 0.6);
+	border-radius: 50px;
+	color: rgb(238, 238, 238);
+	border: 2px solid rgba(0, 0, 0, 0.5);
+	font-family: 'Montserrat', sans-serif;
+	font-weight: 400;
+	font-size: 24px;
+	user-select: none;
 }
 
 .secondText {
-  /* height: 600px; */
-  height: 300px;
-  background-color: rgba(10, 22, 37, 0.6);
-  /* border-radius: 50px; */
-  color: rgb(238, 238, 238);
-  border: 1px solid rgba(0, 0, 0, 0.5);
-  user-select: none;
+	/* height: 600px; */
+	height: 300px;
+	background-color: rgba(10, 22, 37, 0.6);
+	/* border-radius: 50px; */
+	color: rgb(238, 238, 238);
+	border: 1px solid rgba(0, 0, 0, 0.5);
+	user-select: none;
 }
 
 .h4MainIndex {
-  color: rgba(238, 238, 238, 1);
-  font-family: 'Roboto Condensed', sans-serif;
-  font-weight: 700;
-  font-size: 30px;
+	color: rgba(238, 238, 238, 1);
+	font-family: 'Roboto Condensed', sans-serif;
+	font-weight: 700;
+	font-size: 30px;
 }
 
 .pMainIndex {
-  color: rgba(172, 213, 242, 1);
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400;
-  font-size: 18px;
+	color: rgba(172, 213, 242, 1);
+	font-family: 'Roboto', sans-serif;
+	font-weight: 400;
+	font-size: 18px;
 }
 
 .secondText1 {
-  border-top-left-radius: 50px;
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  text-align: left;
+	border-top-left-radius: 50px;
+	display: flex;
+	justify-content: start;
+	align-items: center;
+	text-align: left;
 }
 
 .secondText2 {
-  border-top-right-radius: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: right;
+	border-top-right-radius: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: right;
 }
 
 .secondText3 {
-  border-bottom-left-radius: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: left;
+	border-bottom-left-radius: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: left;
 }
 
 .secondText4 {
-  border-bottom-right-radius: 50px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: right;
+	border-bottom-right-radius: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	text-align: right;
 }
 
 .divMainText {
-  height: 250px;
-  width: 400px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+	height: 250px;
+	width: 400px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 }
 
 .footerIndex {
-  height: 60px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: rgba(0, 0, 0, 0.8);
+	height: 60px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	background-color: rgba(0, 0, 0, 0.8);
 }
 
 .btnContact,
 .btnContact:hover,
 .btnContact:focus,
 .btnContact:active {
-  background-color: rgb(10, 22, 37);
-  color: white;
-  border-radius: 50px;
-  height: 50px;
-  width: 150px;
+	background-color: rgb(10, 22, 37);
+	color: white;
+	border-radius: 50px;
+	height: 50px;
+	width: 150px;
 }
 
 /* .btnContact:active {
@@ -255,18 +268,18 @@
 } */
 
 .linkFooter {
-  width: 150px;
-  height: 50px;
-  border-radius: 50px;
-  background-color: rgb(10, 22, 37);
-  text-decoration: none;
-  color: white;
+	width: 150px;
+	height: 50px;
+	border-radius: 50px;
+	background-color: rgb(10, 22, 37);
+	text-decoration: none;
+	color: white;
 }
 
 #Instagram {
-  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
-  -webkit-background-clip: text;
-  /* Also define standard property for compatibility */
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
+	background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+	-webkit-background-clip: text;
+	/* Also define standard property for compatibility */
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
