--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,6 @@
 /* ------------------------------------------------------------ Variables ------------------------------------------------------------ */
 
-.asdaa{
+.enlargeCards {
 	height: 1498px;
 }
 
